tests/e2e/argocd-ingress-test/01-ingress.yaml
apiVersion: argoproj.io/v1alpha1
kind: ArgoCD
metadata:
  name: example-argocd
  labels:
    example: ingress
spec:
  ingress:
    enabled: true
  server:
    insecure: true
