tests/e2e/argocd-ingress-test/01-assert.yaml
apiVersion: argoproj.io/v1alpha1
kind: ArgoCD
metadata:
  name: example-argocd
status:
  phase: Pending
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-argocd
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-argocd-grpc
